[package]
build = 'build.rs'
edition = '2021'
name = 'ton_dev_assembler'
version = '1.8.0'

[dependencies]
anyhow = '1.0'
clap = { features = [ 'derive' ], version = '4.3' }
hex = '0.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
serde = { features = [ 'derive' ], version = '1.0' }
serde_json = '1.0'
thiserror = '1.0'
ton_dev_block = { git = 'https://github.com/ton-dev-dao/ton-dev-block.git', tag = '1.11.20' }
ton_dev_vm = { git = 'https://github.com/ton-dev-dao/ton-dev-vm.git', tag = '2.2.21' }

[features]
gosh = [  ]
groth = [  ]

